[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "homelib-tools"
version = "0.0.1"
authors = [
  { name="Jeffrey McGovern", email="jeff@jdmcg.org" },
]
description = "Tools for cataloguing a home media library."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = [
    "python-dotenv",
    "isbntools",
]

[project.optional-dependencies]
dev=[
  "mypy",
  "ruff",
]

[project.urls]
Homepage = "https://github.com/jmcgover/homelib-tools"
Issues = "https://github.com/jmcgover/homelib-tools/issues"
